<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.navigationsample.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_notificationItemsFragment2"
            app:destination="@id/notificationItemsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.example.navigationsample.ui.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk" >
        <action
            android:id="@+id/action_navigation_talk_to_talkRoomFragment"
            app:destination="@id/talkRoomFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.navigationsample.ui.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />
    <fragment
        android:id="@+id/notificationItemsFragment"
        android:name="com.example.navigationsample.NotificationItemsFragment"
        android:label="fragment_notification_items_list"
        tools:layout="@layout/fragment_notification_items_list" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.navigationsample.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.navigationsample.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/talkRoomFragment"
        android:name="com.example.navigationsample.TalkRoomFragment"
        android:label="fragment_talk_room"
        tools:layout="@layout/fragment_talk_room" />
</navigation>